[package]
name = "spheres"
version = "0.1.0"
edition = "2021"
description = "Phase 0 prototype: a single sphere that everts and envelops the viewer."

[dependencies]
wgpu = "29"
winit = "0.30"
glyphon = "0.11"
bytemuck = { version = "1", features = ["derive"] }
pollster = "0.4"
glam = "0.33"
env_logger = "0.11"
log = "0.4"

# A prototype we will iterate on interactively; optimize so the eversion is
# actually representative of release-build frame times.
[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
